--- a/HMS Bennett/AppsPage.html
+++ b/HMS Bennett/AppsPage.html
@@ -16,64 +16,353 @@
   </head>
 
   <body onload="OnLoad()">
+    <div class="content">
     <h2 class="title">
-      <img src="images/Website.png" width="20%" height"20%"></br>
-      Applications
+      <a href="Index.html">
+        <img src="images/Website.png" width="20%" height"20%"></br>
+      </a>
+      Software Applications
     </h2>
     <h3>
       <ul class="menu">
-        <li><a href="Index.html">Home</a></li>
+        <li>
+          <a href="Index.html">Home</a>
+        </li>
         <li>
           <a href="AppsPage.html">Applications</a>
-            <ul>
-              <li><a href="NG.html">Primary School Numbers Game</a></li>
-              <li><a href="USM.html">University Stage Management Application</a></li>
-              <li><a href="RC.html">Room Control Application</a></li>
-              <li><a href="MT.html">Collection of Smaller Applications</a></li>
-              <li><a href="BBA.html">Radiotherapy Assistant</a></li>
-              <li><a href="AW.html">Android Weather Application</a></li>
-              <li><a href="TT.html">Tali's Textiles</a></li>
-            </ul>
         </li>
         <li>
-          <a href="GamePage.html">Games</a>
-            <ul>
-              <li><a href="GAW.html">Gods At War</a></li>
-              <li><a href="TBA.html">The Awakening</a></li>
-              <li><a href="SF.html">Seneschal's Fortress</a></li>
-              <li><a href="HR.html">Hover Racer</a></li>
-              <li><a href="FB.html">Full Beans</a></li>
-              <li><a href="FinalProject.html">Final Project</a></li>
-            </ul>
+          <a href="GamePage.html">Game Projects</a>
         </li>
-        <li><a href="DevLog.html">Dev Log</a></li>
+        <li>
+          <a href="GameJam.html">Game Jam</a>
+        </li>
+        <li>
+          <a href="DevLog.html">Dev Log</a>
+        </li>
       </ul>
     </h3>
     <div class="clear"></div>
     <div class="leftMenu">
-
     </div>
     <div class="mainText">
-      <p>
-        I have made several applications. Such as a Radiotherapy Assistant and Student Loan Repayment Calculator.</br>
-        </br>
-        <left>
-          <u>Downloadable</u></br></br>
-          <a href="NG.html">Primary School Numbers Game</a></br></br>
-          <a href="USM.html">University Stage Management Application.</a></br></br>
-          <a href="RC.html">Room Control Application.</a></br></br>
-          <a href="MT.html">My Tools.</a></br></br>
-          <a href="BBA.html">Radiotherapy Assistant.</a></br></br>
-          <a href="AW.html">Android Weather.</a></br></br>
-        </left>
-        <right>
-          <u>Planned</u></br></br>
-          <a href="TT.html">Tali's Textiles</a></br>
-        </right>
-      </p>
+      <table>
+        <tr>
+          <td>
+            <div>
+                <left>
+                  <table>
+                    <th>Tali's Textiles</th>
+                    <tr>
+                      <td>Build Time: 150 hours</td>
+                    </tr>
+                    <tr>
+                      <td>Build Purpose: Introduction To Asynchronous Web Scripting</td>
+                    </tr>
+                    <tr>
+                      <td>Start Date: November 2018</td>
+                    </tr>
+                    <tr>
+                      <td>Skills: JavaScript, MongoDB, Node.js, HTML, CSS</td>
+                    </tr>
+                  </table><br>
+                  <table>
+                    <tr>
+                      <th>Description</th>
+                    </tr>
+                    <tr>
+                      <td>
+                        This application acts as a online market place, connecting to
+                        a MongoDB database through JavaScript and Node.js. Items can be
+                        added to the basket and spoof checked out while updating the
+                        database.
+                      </td>
+                    </tr>
+                  </table><br>
+                  <table>
+                    <th>Webpage Link</th>
+                    <tr>
+                      <td><a href="Tali/TaliHome.html"><u>Tali's Textiles Page</u></a></td>
+                    </tr>
+                  </table><br>
+                </left>
+                <right>
+                  <table>
+                    <th>Demonstration</th>
+                    <tr>
+                      <td><iframe width="560" height="315" src="https://www.youtube.com/embed/9NhrX6BMUR0" frameborder="0" allow="accelerometer; autoplay; encrypted-media" allowfullscreen></iframe></td>
+                    </tr>
+                  </table>
+                </right>
+              </div>
+          </td>
+        </tr>
+          <td class="split"><br></td>
+        <tr>
+          <td>
+          <div>
+              <left>
+                <table>
+                  <th>BBA - Radiotherapy Assistant</th>
+                  <tr>
+                    <td>Build Time: 200 hours</td>
+                  </tr>
+                  <tr>
+                    <td>Build Purpose: Client Prototype Project</td>
+                  </tr>
+                  <tr>
+                    <td>Start Date: January 2018</td>
+                  </tr>
+                  <tr>
+                    <td>Skills: Android Studios, Java</td>
+                  </tr>
+                </table><br>
+                <table>
+                  <tr>
+                    <th>Description</th>
+                  </tr>
+                  <tr>
+                    <td>
+                      This application is an early prototype developed for Taunton Hospital through <a href="https://bbahealth.com/">BBA Health</a>.
+                      The application allows Radiotherapy patients to see how they are progressing
+                      , based on average treatment times. As well as displaying important information
+                      specific to their diagnoses and treatment.
+                    </td>
+                  </tr>
+                </table>
+              </left>
+              <right>
+                <table>
+                  <th>Download Link</th>
+                  <tr>
+                    <td><a href="https://drive.google.com/file/d/1iTJzxz01BdQMvXprondsXJNrDQKyKy2B/view?usp=sharing" download><u>Google Drive Link</u></a></td>
+                  </tr>
+                </table><br>
+                <table>
+                  <th>Demonstration</th>
+                  <tr>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/oYHk4zSjJoI" frameborder="0" allow="accelerometer; autoplay; encrypted-media" allowfullscreen></iframe></td>
+                  </tr>
+                </table>
+              </right>
+            </div>
+          </td>
+        </tr>
+          <td class="split"><br></td>
+        <tr>
+          <td>
+            <div>
+              <left>
+                <table>
+                  <th>Android Weather</th>
+                  <tr>
+                    <td>Build Time: 150 hours</td>
+                  </tr>
+                  <tr>
+                    <td>Build Purpose: Introduction to Native Mobile Developement</td>
+                  </tr>
+                  <tr>
+                    <td>Start Date: March 2018</td>
+                  </tr>
+                  <tr>
+                    <td>Skills: Android Studios, Java, Firebase</td>
+                  </tr>
+                </table><br>
+                <table>
+                  <tr>
+                    <th>Description</th>
+                  </tr>
+                  <tr>
+                    <td>
+                      This application gets the users current position, and using an APK, displays
+                      the weather at their current position. The user can also place pins on the map with
+                      personalised details about the weather which is then stored on a server and can be
+                      seen by other users.
+                    </td>
+                  </tr>
+                </table>
+              </left>
+              <right>
+                <table>
+                  <th>Download Link</th>
+                  <tr>
+                    <td><a href="https://drive.google.com/file/d/1dtO9L7GrUgvUvzEIN4NLlzwPPz46MyOg/view?usp=sharing" download><u>Google Drive Link</u></a></td>
+                  </tr>
+                </table><br>
+                <table>
+                  <th>Demonstration</th>
+                  <tr>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/hkB81Gz3mSo" frameborder="0" allow="accelerometer; autoplay; encrypted-media" allowfullscreen></iframe></td>
+                  </tr>
+                </table>
+              </right>
+            </div>
+          </td>
+        </tr>
+          <!-- <td class="split"><br></td>
+        <tr>
+          <td>
+            <div>
+              <left>
+                <table>
+                  <th>Room Control Application</th>
+                  <tr>
+                    <td>Build Time: 100 hours</td>
+                  </tr>
+                  <tr>
+                    <td>Build Purpose: Introduction To OO Programming and Design Patterns</td>
+                  </tr>
+                  <tr>
+                    <td>Start Date: November 2017</td>
+                  </tr>
+                  <tr>
+                    <td>Skills: Java, NetBeans</td>
+                  </tr>
+                </table><br>
+                <table>
+                  <tr>
+                    <th>Description</th>
+                  </tr>
+                  <tr>
+                    <td>
+                      This application user OO programming principles to allow the user to create
+                      card holders, and depending on their privileges, access rights.
+                    </td>
+                  </tr>
+                </table>
+              </left>
+              <right>
+                <table>
+                  <th>Download Link</th>
+                  <tr>
+                    <td><a href="Files/RoomAccess-Build.zip" download><u>RoomAccess-Build.zip</u></a></td>
+                  </tr>
+                </table><br>
+                <table>
+                  <th>Demonstration</th>
+                  <tr>
+                    <td>Coming Soon</td>
+                  </tr>
+                </table>
+              </right>
+            </div>
+          </td>
+        </tr>
+          <td class="split"><br></td>
+        <tr>
+          <td>
+            <div>
+              <left>
+                <table>
+                  <th>University Stage Management Application</th>
+                  <tr>
+                    <td>Build Time: 100 hours</td>
+                  </tr>
+                  <tr>
+                    <td>Build Purpose: Introduction To C# Forms</td>
+                  </tr>
+                  <tr>
+                    <td>Start Date: July 2017</td>
+                  </tr>
+                  <tr>
+                    <td>Skills: C#, Visual Studio</td>
+                  </tr>
+                </table><br>
+                <table>
+                  <tr>
+                    <th>Description</th>
+                  </tr>
+                  <tr>
+                    <td>
+                      This application allows the user to input their grades and
+                      it calculates their average grade for the year.
+
+                      Based on six modules a year.
+                    </td>
+                  </tr>
+                </table>
+              </left>
+              <right>
+                <table>
+                  <th>Download Link</th>
+                  <tr>
+                    <td>Coming Soon
+                      <a href="Files/StageManagement1.1.exe" download><u>StageManagement1.1.exe</u></a>
+                    </td>
+                  </tr>
+                </table><br>
+                <table>
+                  <th>Demonstration</th>
+                  <tr>
+                    <td>Coming Soon</td>
+                  </tr>
+                </table>
+              </right>
+            </div>
+          </td>
+        </tr> -->
+          <td class="split"><br></td>
+        <tr>
+          <td>
+            <div>
+              <left>
+                <table>
+                  <th>Student Loan Calculator</th>
+                  <tr>
+                    <td>Build Time: 15 hours</td>
+                  </tr>
+                  <tr>
+                    <td>Build Purpose: Personal Project</td>
+                  </tr>
+                  <tr>
+                    <td>Start Date: February 2017</td>
+                  </tr>
+                  <tr>
+                    <td>Skills: C#, Unity3D</td>
+                  </tr>
+                </table><br>
+                <table>
+                  <tr>
+                    <th>Description</th>
+                  </tr>
+                  <tr>
+                    <td>
+                      This application allows the user to input their total debt and
+                      income to calculate how much they will be paying back each year.
+                      Currently set to 9% standard.
+                    </td>
+                  </tr>
+                </table>
+              </left>
+              <right>
+                <table>
+                  <th>Download Link</th>
+                  <tr>
+                    <td><a href="https://drive.google.com/file/d/1WKlRAgCnsS2984l0X6ZcZpC7Q3tgvkGk/view?usp=sharing" download><u>Google Drive Link</u></a></td>
+                  </tr>
+                </table><br>
+                <table>
+                  <th>Demonstration</th>
+                  <tr>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/kwgq7cbj6eI" frameborder="0" allow="accelerometer; autoplay; encrypted-media" allowfullscreen></iframe></td>
+                  </tr>
+                </table>
+              </right>
+            </div>
+          </td>
+        </tr>
+          <td class="split"><br></td>
+      </table><br><br><br><br>
     </div>
     <div class="rightMenu">
-      <div id="Test"></div>
     </div>
+  </div>
+    <footer>
+      <a href="https://www.linkedin.com/in/harrison-bennett-0587aa12a/"><img src="images/LinkedIn.png" width="5%" height"5%"></a>
+      <a href="https://www.youtube.com/channel/UC2DllcU0PIkPsRJXwnQqQKQ/videos.com"><img src="images/YouTube.png" width="5%" height"5%"></a>
+      <a href="https://github.com/HMSBennett"><img src="images/Git.png" width="5%" height"5%"></a>
+      <a href="https://twitter.com/HMSBennett"><img src="images/Twitter.png" width="5%" height"5%"></a>
+      <a href="https://hms-bennett.itch.io/"><img src="images/Itch.png" width="5%" height"5%"></a>
+    </footer>
   </body>
 </html>
