--- a/HMS Bennett/GamePage.html
+++ b/HMS Bennett/GamePage.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>HMS Bennett - Games</title>
+    <title>HMS Bennett - Game Projects</title>
     <link rel="stylesheet" href="CSS/MainStyleSheet.css" />
     <script src="JavaScript/Main.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -16,37 +16,30 @@
   </head>
 
   <body onload="OnLoad()">
+    <div class="content">
     <h2 class="title">
-      <img src="images/Website.png" width="20%" height"20%"></br>
-      Games
+      <a href="Index.html">
+        <img src="images/Website.png" width="20%" height"20%"></br>
+      </a>
+      Game Projects
     </h2>
     <h3>
       <ul class="menu">
-        <li><a href="Index.html">Home</a></li>
+        <li>
+          <a href="Index.html">Home</a>
+        </li>
         <li>
           <a href="AppsPage.html">Applications</a>
-            <ul>
-              <li><a href="NG.html">Primary School Numbers Game</a></li>
-              <li><a href="USM.html">University Stage Management Application</a></li>
-              <li><a href="RC.html">Room Control Application</a></li>
-              <li><a href="MT.html">Collection of Smaller Applications</a></li>
-              <li><a href="BBA.html">Radiotherapy Assistant</a></li>
-              <li><a href="AW.html">Android Weather Application</a></li>
-              <li><a href="TT.html">Tali's Textiles</a></li>
-            </ul>
         </li>
         <li>
-          <a href="GamePage.html">Games</a>
-            <ul>
-              <li><a href="GAW.html">Gods At War</a></li>
-              <li><a href="TBA.html">The Awakening</a></li>
-              <li><a href="SF.html">Seneschal's Fortress</a></li>
-              <li><a href="HR.html">Hover Racer</a></li>
-              <li><a href="FB.html">Full Beans</a></li>
-              <li><a href="FinalProject.html">Final Project</a></li>
-            </ul>
+          <a href="GamePage.html">Game Projects</a>
         </li>
-        <li><a href="DevLog.html">Dev Log</a></li>
+        <li>
+          <a href="GameJam.html">Game Jam</a>
+        </li>
+        <li>
+          <a href="DevLog.html">Dev Log</a>
+        </li>
       </ul>
     </h3>
     <div class="clear"></div>
@@ -54,27 +47,344 @@
 
     </div>
     <div class="mainText">
-      <p>
-        These are a collection of games created throughout my CGD course.
-        Some are works in progress and won't have playable demos.</br></br>
-        Please click to find out more.</br>
-        </br>
-        <left>
-          <u>Playable</u></br></br>
-          <a href="GAW.html">Gods At War</a></br></br>
-          <a href="TBA.html">The Awakening</a></br></br>
-          <a href="SF.html">Seneschal's Fortress</a></br></br>
-          <a href="HR.html">Hover Racer</a></br></br>
-        </left>
-        <right>
-          <u>In Progress</u></br></br>
-          <a href="FinalProject.html">Honour Project</a></br></br>
-          <a href="FB.html">Full Beans</a></br></br>
-        </right>
-      </p>
+      <table>
+        <tr>
+          <td>
+            <div>
+              <left>
+              <table>
+                <th>Honours Project</th>
+                <tr>
+                  <td>Build Time: --- hours</td>
+                </tr>
+                <tr>
+                  <td>Build Purpose: Honours Project</td>
+                </tr>
+                <tr>
+                  <td>Start Date: January 2019</td>
+                </tr>
+                <tr>
+                  <td>Skills: C#, Unity, 3Ds Max, SteamVR</td>
+                </tr>
+              </table><br>
+              <table>
+                <tr>
+                  <th>Description</th>
+                </tr>
+                <tr>
+                  <td>
+                    This project culminates all my knowledge over the years.
+                  </td>
+                </tr>
+                <tr>
+              </table><br>
+              <table>
+                <th>YouTube Playlist</th>
+                <tr>
+                  <td><a href="https://www.youtube.com/playlist?list=PLtIl_XyevzQTl-O3EowGAY9ShujHxpkW7"><u>Honours Playlist</u></a></td>
+                </tr>
+              </table>
+              </left>
+              <right>
+              <table>
+                <th>Download Link</th>
+                <tr>
+                  <td>In Development</td>
+                </tr>
+              </table><br>
+              <table>
+                <th>Demonstration</th>
+                <tr>
+                  <td>In Development</td>
+                </tr>
+              </table>
+              </right>
+            </div>
+          </td>
+        </tr>
+          <td class="split"><br></td>
+        <tr>
+          <td>
+            <div>
+                <left>
+                  <table>
+                    <th>Hover Racer</th>
+                    <tr>
+                      <td>Build Time: 150 hours</td>
+                    </tr>
+                    <tr>
+                      <td>Build Purpose: C# Iterative Game Mechanic</td>
+                    </tr>
+                    <tr>
+                      <td>Start Date: October 2017</td>
+                    </tr>
+                    <tr>
+                      <td>Skills: C#, Unity, 3Ds Max</td>
+                    </tr>
+                  </table><br>
+                  <table>
+                    <tr>
+                      <th>Description</th>
+                    </tr>
+                    <tr>
+                      <td>
+                        This project was designed around a core mathematic mechanic.
+                        Which was decided based on a Kinder Egg toy. The mechanic went through
+                        iterations including wheels and even paddles, before settling on anti-grav.
+                        The racer can either flip vertically or rotate to left or right.<br><br>
+
+                        <img src="images/kinder.jpg" width="200px" height="150px">
+                      </td>
+                    </tr>
+                  </table><br>
+                  <table>
+                    <th>YouTube Playlist</th>
+                    <tr>
+                      <td><a href="https://www.youtube.com/playlist?list=PLtIl_XyevzQTl-O3EowGAY9ShujHxpkW7"><u>Hover Racer Playlist</u></a></td>
+                    </tr>
+                  </table>
+                </left>
+                <right>
+                  <table>
+                    <th>Download Link</th>
+                    <tr>
+                      <td><iframe frameborder="0" src="https://itch.io/embed/190449?bg_color=101010&amp;fg_color=FFFFFF&amp;link_color=008C28&amp;border_color=3f3f3f" width="560" height="167"></iframe></td>
+                    </tr>
+                  </table><br>
+                  <table>
+                    <th>Demonstration</th>
+                    <tr>
+                      <td><iframe width="560" height="315" src="https://www.youtube.com/embed/hyd4AIRoCs8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></td>
+                    </tr>
+                  </table>
+                </right>
+              </div>
+          </td>
+        </tr>
+          <td class="split"><br></td>
+        <tr>
+          <td>
+            <div>
+              <left>
+                <table>
+                  <th>Spell Slinger VR</th>
+                  <tr>
+                    <td>Build Time: 150 hours</td>
+                  </tr>
+                  <tr>
+                    <td>Build Purpose: Rapid VR Prototyping with Unity 3D</td>
+                  </tr>
+                  <tr>
+                    <td>Start Date: November 2018</td>
+                  </tr>
+                  <tr>
+                    <td>Skills: C#, Unity, VRTK</td>
+                  </tr>
+                </table><br>
+                <table>
+                  <tr>
+                    <th>Description</th>
+                  </tr>
+                  <tr>
+                    <td>
+                      This project was created by the team, Full Beans, and an introduction into Virtual Reality,
+                      from the perspective of a Technical Lead. This project also provided a good opportunity to
+                      work with a ToolKit from the Unity asset store.
+                    </td>
+                  </tr>
+                </table><br>
+                <table>
+                  <th>Website Link</th>
+                  <tr>
+                    <td><a href="http://fullbeans.co.uk/"><u>fullbeans.co.uk</u></a></td>
+                  </tr>
+                </table><br>
+                <table>
+                  <th>YouTube Playlist</th>
+                  <tr>
+                    <td><a href="https://www.youtube.com/playlist?list=PLtIl_XyevzQTCKqj3fkKcqHiBUytPOxAG"><u>Full Beans Playlist</u></a></td>
+                  </tr>
+                </table>
+              </left>
+              <right>
+                <table>
+                  <th>Download Link</th>
+                  <tr>
+                    <td><iframe frameborder="0" src="https://itch.io/embed/323742?bg_color=101010&amp;fg_color=ffffff&amp;link_color=008C28&amp;border_color=3f3f3f" width="560" height="167"></iframe></td>
+                  </tr>
+                </table><br>
+                <table>
+                  <th>Demonstration</th>
+                  <tr>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/EkkxNZp7isk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></td>
+                  </tr>
+                </table>
+              </right>
+            </div>
+          </td>
+        </tr>
+          <td class="split"><br></td>
+        <tr>
+          <td>
+            <div>
+              <left>
+                <table>
+                  <th>Seneschal's Fortress</th>
+                  <tr>
+                    <td>Build Time: 100 hours</td>
+                  </tr>
+                  <tr>
+                    <td>Build Purpose: 2D Top Down Development</td>
+                  </tr>
+                  <tr>
+                    <td>Start Date: February 2017</td>
+                  </tr>
+                  <tr>
+                    <td>Skills: C#, Unity, Photoshop</td>
+                  </tr>
+                </table><br>
+                <table>
+                  <tr>
+                    <th>Description</th>
+                  </tr>
+                  <tr>
+                    <td>
+                      This project is an introduction to building a fully fledged itch.io page, including
+                      screenshots, trailer, background art and story. Simple game play mechanics with
+                      a very basic art style.
+                    </td>
+                  </tr>
+                </table>
+              </left>
+              <right>
+                <table>
+                  <th>Download Link</th>
+                  <tr>
+                    <td><iframe frameborder="0" src="https://itch.io/embed/142648?bg_color=101010&amp;fg_color=ffffff&amp;link_color=008C28&amp;border_color=3f3f3f" width="560" height="167"></iframe></td>
+                  </tr>
+                </table><br>
+                <table>
+                  <th>Trailer</th>
+                  <tr>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/kTwvlA5ARfM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></td>
+                  </tr>
+                </table>
+              </right>
+            </div>
+          </td>
+        </tr>
+          <td class="split"><br></td>
+        <tr>
+          <td>
+            <div>
+              <left>
+                <table>
+                  <th>Text Based Adventure</th>
+                  <tr>
+                    <td>Build Time: 100 hours</td>
+                  </tr>
+                  <tr>
+                    <td>Build Purpose: Web Game Development</td>
+                  </tr>
+                  <tr>
+                    <td>Start Date: October 2016</td>
+                  </tr>
+                  <tr>
+                    <td>Skills: JavaScript, HTML, CSS, PixelArt</td>
+                  </tr>
+                </table><br>
+                <table>
+                  <tr>
+                    <th>Description</th>
+                  </tr>
+                  <tr>
+                    <td>
+                      This project is an introduction to web scripting, as well as
+                      creating a storyline. Using array manipulation to replace certain parts
+                      of a template.
+                    </td>
+                  </tr>
+                </table><br>
+                <table>
+                  <th>Website Link</th>
+                  <tr>
+                    <td><a href="TheAwakening.html">The Awakening</a></td>
+                  </tr>
+                </table><br>
+              </left>
+              <right>
+                <table>
+                  <th>Demonstration</th>
+                  <tr>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/92JOV9zkLlw" frameborder="0" allow="accelerometer; autoplay; encrypted-media" allowfullscreen></iframe></td>
+                  </tr>
+                </table>
+              </right>
+            </div>
+          </td>
+        </tr>
+          <td class="split"><br></td>
+        <tr>
+          <td>
+            <div>
+              <left>
+                <table>
+                  <th>Gods At War</th>
+                  <tr>
+                    <td>Build Time: 150 hours</td>
+                  </tr>
+                  <tr>
+                    <td>Build Purpose: Introduction To Unity3D</td>
+                  </tr>
+                  <tr>
+                    <td>Start Date: February 2016</td>
+                  </tr>
+                  <tr>
+                    <td>Skills: C#, Unity, Photoshop, Adobe Flash</td>
+                  </tr>
+                </table><br>
+                <table>
+                  <tr>
+                    <th>Description</th>
+                  </tr>
+                  <tr>
+                    <td>
+                      This project is an introduction to Unity, learning about canvas
+                      based GameObjects and how they interact through code. Also some simple
+                      player stats, and how it affects different gameplay.
+                    </td>
+                  </tr>
+                </table>
+              </left>
+              <right>
+                <table>
+                  <th>Download Link</th>
+                  <tr>
+                    <td><iframe frameborder="0" src="https://itch.io/embed/190462?bg_color=101010&amp;fg_color=ffffff&amp;link_color=008C28&amp;border_color=3f3f3f" width="560" height="167"></iframe></td>
+                  </tr>
+                </table><br>
+                <table>
+                  <th>Demonstration</th>
+                  <tr>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/YyRakPmu4Hs" frameborder="0" allow="accelerometer; autoplay; encrypted-media" allowfullscreen></iframe></td>
+                  </tr>
+                </table>
+              </right>
+            </div>
+          </td>
+        </tr>
+          <td class="split"><br></td>
+      </table><br><br><br><br>
     </div>
     <div class="rightMenu">
-      <div id="Test"></div>
     </div>
+  </div>
+    <footer>
+      <a href="https://www.linkedin.com/in/harrison-bennett-0587aa12a/"><img src="images/LinkedIn.png" width="5%" height"5%"></a>
+      <a href="https://www.youtube.com/channel/UC2DllcU0PIkPsRJXwnQqQKQ/videos.com"><img src="images/YouTube.png" width="5%" height"5%"></a>
+      <a href="https://github.com/HMSBennett"><img src="images/Git.png" width="5%" height"5%"></a>
+      <a href="https://twitter.com/HMSBennett"><img src="images/Twitter.png" width="5%" height"5%"></a>
+      <a href="https://hms-bennett.itch.io/"><img src="images/Itch.png" width="5%" height"5%"></a>
+    </footer>
   </body>
 </html>
