--- a/HMS Bennett/TheAwakening.html
+++ b/HMS Bennett/TheAwakening.html
@@ -16,41 +16,31 @@
   </head>
 
   <body onload="On_Load()">
+    <div class="content">
     <h2 class="title">
-      <img src="images/Website.png" width="20%" height"20%"></br>
+      <a href="Index.html">
+        <img src="images/Website.png" width="20%" height"20%"></br>
+      </a>
       The Awakening
     </h2>
     <h3>
       <ul class="menu">
-        <li><a href="Index.html">Home</a></li>
         <li>
           <a href="AppsPage.html">Applications</a>
-            <ul>
-              <li><a href="NG.html">Primary School Numbers Game</a></li>
-              <li><a href="USM.html">University Stage Management Application</a></li>
-              <li><a href="RC.html">Room Control Application</a></li>
-              <li><a href="MT.html">Collection of Smaller Applications</a></li>
-              <li><a href="BBA.html">Radiotherapy Assistant</a></li>
-              <li><a href="AW.html">Android Weather Application</a></li>
-              <li><a href="TT.html">Tali's Textiles</a></li>
-            </ul>
         </li>
         <li>
-          <a href="GamePage.html">Games</a>
-            <ul>
-              <li><a href="GAW.html">Gods At War</a></li>
-              <li><a href="TBA.html">The Awakening</a></li>
-              <li><a href="SF.html">Seneschal's Fortress</a></li>
-              <li><a href="HR.html">Hover Racer</a></li>
-              <li><a href="FB.html">Full Beans</a></li>
-              <li><a href="FinalProject.html">Final Project</a></li>
-            </ul>
+          <a href="GamePage.html">Game Projects</a>
         </li>
-        <li><a href="DevLog.html">Dev Log</a></li>
+        <li>
+          <a href="GameJam.html">Game Jam</a>
+        </li>
+        <li>
+          <a href="DevLog.html">Dev Log</a>
+        </li>
       </ul>
     </h3>
     <div class="clear"></div>
-    <div class="leftMenu">
+    <div class="leftMenuAwake">
       <h3 id="ChosenName">
         Name:
       </h3>
@@ -61,14 +51,14 @@
         Death Count:
       </h3>
     </div>
-    <div class="mainTextAlt">
+    <div class="mainTextAwake">
       <div id="shipImages"><img id="imgSpace" src=""></div>
       <p id="shipStory">
         <!...Insert Story...></br>
       </p></br></br>
       <!...Insert Choice...><div id="shipChoices"></div>
     </div>
-    <div class="rightMenu">
+    <div class="rightMenuAwake">
       <h3>Items:</h3>
       <ul id="Items">
       </ul>
