--- a/HMS Bennett/Index.html
+++ b/HMS Bennett/Index.html
@@ -18,36 +18,28 @@
   <body onload="OnLoad()">
     <div class="content">
     <h2 class="title">
-      <img src="images/Website.png" width="20%" height"20%"></br>
-      Home
+      <a href="Index.html">
+        <img src="images/Website.png" width="20%" height"20%"></br>
+      </a>
+      Harrison Bennett
     </h2>
     <h3>
       <ul class="menu">
-        <li><a href="Index.html">Home</a></li>
+        <li>
+          <a href="Index.html">Home</a>
+        </li>
         <li>
           <a href="AppsPage.html">Applications</a>
-            <ul>
-              <li><a href="NG.html">Primary School Numbers Game</a></li>
-              <li><a href="USM.html">University Stage Management Application</a></li>
-              <li><a href="RC.html">Room Control Application</a></li>
-              <li><a href="MT.html">Collection of Smaller Applications</a></li>
-              <li><a href="BBA.html">Radiotherapy Assistant</a></li>
-              <li><a href="AW.html">Android Weather Application</a></li>
-              <li><a href="TT.html">Tali's Textiles</a></li>
-            </ul>
         </li>
         <li>
-          <a href="GamePage.html">Games</a>
-            <ul>
-              <li><a href="GAW.html">Gods At War</a></li>
-              <li><a href="TBA.html">The Awakening</a></li>
-              <li><a href="SF.html">Seneschal's Fortress</a></li>
-              <li><a href="HR.html">Hover Racer</a></li>
-              <li><a href="FB.html">Full Beans</a></li>
-              <li><a href="FinalProject.html">Final Project</a></li>
-            </ul>
+          <a href="GamePage.html">Game Projects</a>
         </li>
-        <li><a href="DevLog.html">Dev Log</a></li>
+        <li>
+          <a href="GameJam.html">Game Jam</a>
+        </li>
+        <li>
+          <a href="DevLog.html">Dev Log</a>
+        </li>
       </ul>
     </h3>
     <div class="clear"></div>
@@ -56,27 +48,38 @@
     </div>
     <div class="mainText">
       <p>
-        My name is Harrison Bennett.</br></br>
-        I am a 22 year old Computing and Games Development student at The University Of Plymouth. Currently on my third and final year</br>
-        I enjoy lots of differnt games, however The Legend Of Zelda is my favourite series.</br>
-        I enjoy archery, and have been a member of Plymouth Archery Society since September 2015.</br>
-        I am fascinated by Greek Mythology so tend to base games on it.</br></br>
-        Click on games tab to see what is currently in the works, or play a working game.</br></br>
-        Click the applications tab to download an APK or EXE application.</br></br>
+        I am looking for a graduate Unity Developer role from July 2019.<br><br>
 
+        My specialisms are C#, JavaScript, Java, Unity3D as well as Mobile Android Development. I also have experience with 3D modelling in 3DS Max, and C++.<br><br>
 
+        Click on games tab to see what is currently in the works, or play a working game.<br>
+        Click the applications tab to download an APK or EXE application.<br>
       </p>
+      <p class="split"><br></p>
+      <h3>Show Reel</h3>
+      <!-- Coming Soon -->
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/sAJoVY_B2ZM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <p class="split"><br></p>
+      <table>
+        <th>Research Papers</th>
+        <tr>
+          <td><a href="https://drive.google.com/file/d/1zWqYoTkx12-U44B2uw0334zjJix0H4N1/view?usp=sharing"><u>The Effect Of Menus</u></a></td>
+        </tr>
+        <tr>
+          <td><a href="https://drive.google.com/open?id=1wsevYvID1UuSETok2hx3yef42Y0pWjo4"><u>Using Neural Evolution to Train an AI in Space Invaders</u></a></td>
+        </tr>
+          <td class="split"><br></td>
+      </table><br><br><br><br>
     </div>
     <div class="rightMenu">
-      <div id="Test"></div>
     </div>
   </div>
-    <footer class="footer">
-      <a href="https://www.linkedin.com/in/harrison-bennett-0587aa12a/"><img src="images/LinkedIn.png" width="5%" height"5%"></a>
-      <a href="https://www.youtube.com/channel/UC2DllcU0PIkPsRJXwnQqQKQ/videos.com"><img src="images/YouTube.png" width="5%" height"5%"></a>
-      <a href="https://github.com/HMSBennett"><img src="images/Git.png" width="5%" height"5%"></a>
-      <a href="https://twitter.com/HMSBennett"><img src="images/Twitter.png" width="5%" height"5%"></a>
-      <a href="https://hms-bennett.itch.io/"><img src="images/Itch.png" width="5%" height"5%"></a>
+    <footer>
+      <a class="SM" href="https://www.linkedin.com/in/harrison-bennett-0587aa12a/"><img src="images/LinkedIn.png" width="5%" height"5%"></a>
+      <a class="SM" href="https://www.youtube.com/channel/UC2DllcU0PIkPsRJXwnQqQKQ/videos.com"><img src="images/YouTube.png" width="5%" height"5%"></a>
+      <a class="SM" href="https://github.com/HMSBennett"><img src="images/Git.png" width="5%" height"5%"></a>
+      <a class="SM" href="https://twitter.com/HMSBennett"><img src="images/Twitter.png" width="5%" height"5%"></a>
+      <a class="SM" href="https://hms-bennett.itch.io/"><img src="images/Itch.png" width="5%" height"5%"></a>
     </footer>
   </body>
 </html>
