--- a/HMS Bennett/Index.html
+++ b/HMS Bennett/Index.html
@@ -48,7 +48,7 @@
     </div>
     <div class="mainText">
       <p>
-        I am looking for a graduate Unity Developer role from July 2019.<br><br>
+        Junior Developer at Vuzion.<br><br>
 
         My specialisms are C#, JavaScript, Java, Unity3D as well as Mobile Android Development. I also have experience with 3D modelling in 3DS Max, and C++.<br><br>
 
